--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,22 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer base {
+  @font-face {
+    font-family: "Satoshi";
+    src: url("../public/fonts/Satoshi-Variable.woff2") format("woff2");
+  }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  @font-face {
+    font-family: "neue";
+    src: url("../public/fonts/NeueMontreal-Regular.6a837091.woff2") format("woff2");
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+
+@theme {
+  --font-satoshi: "Satoshi", sans-serif;
+}
+
+@theme {
+  --font-neue: "neue", sans-serif;
 }
