--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,11 @@
 @theme {
   --font-neue: "neue", sans-serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
